// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transactions renders when the account has no transactions 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1"
>
  Loading transaction data...
</p>
`;

exports[`Transactions renders when the account has no transactions 2`] = `
<p
  className="MuiTypography-root MuiTypography-body1"
>
  No transactions
</p>
`;

exports[`Transactions renders when transactions are returned 1`] = `
<p
  className="MuiTypography-root MuiTypography-body1"
>
  Loading transaction data...
</p>
`;

exports[`Transactions renders when transactions are returned 2`] = `
<table
  className="MuiTable-root"
  role={null}
>
  <tbody
    className="MuiTableBody-root"
    role={null}
  >
    <tr
      className="MuiTableRow-root"
      role={null}
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          Uber 063015 SF**POOL**
        </p>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          2020-10-12
        </p>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          $5.40
        </p>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root"
      role={null}
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          United Airlines
        </p>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          2020-10-10
        </p>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          -$500.00
        </p>
      </td>
    </tr>
    <tr
      className="MuiTableRow-root"
      role={null}
    >
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          McDonald's
        </p>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          2020-10-09
        </p>
      </td>
      <td
        aria-sort={null}
        className="MuiTableCell-root MuiTableCell-body"
      >
        <p
          className="MuiTypography-root MuiTypography-body1"
        >
          $12.00
        </p>
      </td>
    </tr>
  </tbody>
</table>
`;
